--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Word Guess Game - Animals</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -52,6 +52,10 @@
 
                 <p>LETTERS ALREADY GUESSED: <br><span id="letters"></span></p>
 
+                <button class="button-clue btn btn-danger">SHOW CLUE</button>
+                <br>
+                <br>
+                <p class="clue"></p>
             </div>
             <div class="col-md-2 col-sm-0"></div>
         </div>
